# Martians

./: .gitignore  CMakeLists.txt  Makefile  README.md
report/: main.py  parser.py  report.py
src/: main  main.c  marcianos.txt  martian.h  timeline.txt
src/codigo/: CMakeLists.txt  Martian.h  Martian_node.c  Martian_node.h  logic.c  main  main.c
